--- a/PhotosApp/PhotosApp.csproj
+++ b/PhotosApp/PhotosApp.csproj
@@ -45,51 +45,133 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include=".photos\101.jpg"/>
-    <None Include=".photos\102.jpg"/>
-    <None Include=".photos\103.jpg"/>
-    <None Include=".photos\104.jpg"/>
-    <None Include=".photos\105.jpg"/>
-    <None Include=".photos\106.jpg"/>
-    <None Include=".photos\201.jpg"/>
-    <None Include=".photos\202.jpg"/>
-    <None Include=".photos\203.jpg"/>
-    <None Include=".photos\204.jpg"/>
-    <None Include=".photos\205.jpg"/>
-    <None Include=".photos\206.jpg"/>
+      <None Include=".photos\101.jpg"/>
+      <None Include=".photos\102.jpg"/>
+      <None Include=".photos\103.jpg"/>
+      <None Include=".photos\104.jpg"/>
+      <None Include=".photos\105.jpg"/>
+      <None Include=".photos\106.jpg"/>
+      <None Include=".photos\201.jpg"/>
+      <None Include=".photos\202.jpg"/>
+      <None Include=".photos\203.jpg"/>
+      <None Include=".photos\204.jpg"/>
+      <None Include=".photos\205.jpg"/>
+      <None Include=".photos\206.jpg"/>
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="10.1.1"/>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
-    <PackageReference Include="IdentityModel" Version="5.1.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.4"/>
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.9.0"/>
-    <PackageReference Include="Microsoft.Net.Compilers" Version="3.9.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1"/>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2"/>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
-    <PackageReference Include="NUnit" Version="3.13.1"/>
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0"/>
-    <PackageReference Include="System.Drawing.Common" Version="5.0.2"/>
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5"/>
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="10.1.1"/>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
+        <PackageReference Include="IdentityModel" Version="5.1.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.4"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.9.0"/>
+        <PackageReference Include="Microsoft.Net.Compilers" Version="3.9.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1"/>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2"/>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+        <PackageReference Include="NUnit" Version="3.13.1"/>
+        <PackageReference Include="NUnit3TestAdapter" Version="3.17.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Serilog.AspNetCore" Version="4.1.0"/>
+        <PackageReference Include="System.Drawing.Common" Version="5.0.2"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5"/>
+    </ItemGroup>
+    <ItemGroup>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\AccessDenied.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ConfirmEmail.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ConfirmEmailChange.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ExternalLogin.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ForgotPassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ForgotPasswordConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Lockout.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Login.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\LoginWith2fa.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\LoginWithRecoveryCode.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Logout.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\ChangePassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\DeletePersonalData.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\Disable2fa.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\DownloadPersonalData.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\Email.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\EnableAuthenticator.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\ExternalLogins.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\GenerateRecoveryCodes.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\Index.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\PersonalData.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\ResetAuthenticator.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\SetPassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\ShowRecoveryCodes.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\TwoFactorAuthentication.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\_Layout.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\_ManageNav.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\_StatusMessage.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Manage\_ViewImports.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\Register.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\RegisterConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ResendEmailConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ResetPassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\ResetPasswordConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\_StatusMessage.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Account\_ViewImports.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\Error.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\_ValidationScriptsPartial.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\_ViewImports.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Pages\_ViewStart.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\AccessDenied.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ConfirmEmail.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ConfirmEmailChange.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ExternalLogin.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ForgotPassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ForgotPasswordConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Lockout.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Login.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\LoginWith2fa.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\LoginWithRecoveryCode.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Logout.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\ChangePassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\DeletePersonalData.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\Disable2fa.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\DownloadPersonalData.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\Email.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\EnableAuthenticator.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\ExternalLogins.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\GenerateRecoveryCodes.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\Index.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\PersonalData.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\ResetAuthenticator.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\SetPassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\ShowRecoveryCodes.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\TwoFactorAuthentication.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\_Layout.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\_ManageNav.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\_StatusMessage.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Manage\_ViewImports.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\Register.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\RegisterConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ResendEmailConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ResetPassword.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\ResetPasswordConfirmation.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\_StatusMessage.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Account\_ViewImports.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\Error.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\_ValidationScriptsPartial.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\_ViewImports.cshtml"/>
+        <_ContentIncludedByDefault Remove="Areas\Pages\_ViewStart.cshtml"/>
+    </ItemGroup>
 </Project>
